--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.1.2",
+    "mongoose": "^5.3.9",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
   }
 }
